# veridion-nexus

./: .cursorrules  .dockerignore  .env.example  .gitignore  019_conformity_assessments.sql  Select-String -Pattern CREATE.INDEXCURRENT_TIMESTAMPIMMUTABLE -Context 1,1  ARCHITECTURE.md  BUG_REPORT.md  COMPLETE_SYSTEM_TEST.md  COMPLIANCE_GAP_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  E2E_TEST_RESULTS.md  ENV_VARIABLES.md  EXTENSION_PLAN.md  FAZA1_SUCCESS_CRITERIA_TEST.md  FAZA1_VERIFICATION_REPORT.md  FAZA1_VERIFICATION_SUMMARY.md  FINAL_TEST_SUMMARY.md  FIX_COMPILATION_ERRORS.md  GIT_HISTORY_ASSESSMENT.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_REVIEW_5_CRITICAL_FEATURES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MISSING_MODULES_ANALYSIS.md  PENETRATION_TEST_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_1_MODULES_STATUS.md  PROPOSED_GDPR_ARTICLE_44_49_FIX.md  RBAC_CRITICAL_ENDPOINTS.md  RBAC_INTEGRATION_GUIDE.md  README.md  README_SETUP.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_APPLIED.md  SECURITY_HARDENING_SUMMARY.md  SMART_COMPLIANCE_IMPLEMENTATION_STRATEGY.md  SYSTEM_TEST_REPORT.md  (+52 more)
dashboard/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/app/advanced-analytics/: page.tsx
dashboard/app/ai-bom/: page.tsx
dashboard/app/ai-explainability/: page.tsx
dashboard/app/approvals/: page.tsx
dashboard/app/assets/: page.tsx
dashboard/app/audit-reports/: page.tsx
dashboard/app/automated-decisions/: page.tsx
dashboard/app/business-functions/: page.tsx
dashboard/app/canary/: page.tsx
dashboard/app/circuit-breaker/: page.tsx
dashboard/app/compliance/: page.tsx
dashboard/app/compliance-overview/: page.tsx
migrations/: 001_initial_schema.sql  002_consent_management.sql  003_dpia_tracking.sql  004_retention_periods.sql  005_post_market_monitoring.sql  006_ai_energy_telemetry.sql  007_webhook_support.sql  008_performance_optimization.sql  009_security_hardening.sql  010_add_api_key_permissions.sql  011_module_configuration.sql  012_fix_timestamp_types.sql  013_user_notifications.sql  014_processing_restrictions.sql  015_processing_objections.sql  016_automated_decisions.sql  017_user_notification_preferences.sql  018_data_recipients_tracking.sql  019_conformity_assessments.sql  020_data_governance_extension.sql
scripts/: README.md  add-license-headers.ps1  add-license-headers.sh  check-vulnerabilities.ps1  check-vulnerabilities.sh  verify_mvp_metrics.ps1
sdks/: .gitignore  README.md  SDK_IMPLEMENTATION_SUMMARY.md  __init__.py  pyproject.toml  requirements.txt  setup.py
sdks/aws_bedrock/: README.md  __init__.py  veridion_bedrock.py
sdks/azure_ai/: README.md  __init__.py  veridion_azure_ai.py
sdks/common/: __init__.py  veridion_client.py
sdks/examples/: aws_bedrock_example.py  azure_ai_example.py  gcp_vertex_example.py  huggingface_example.py  langchain_example.py  openai_mcp_example.py
sdks/gcp_vertex/: README.md  __init__.py  veridion_vertex.py
sdks/huggingface/: README.md  __init__.py  veridion_huggingface.py
sdks/langchain/: README.md  __init__.py  veridion_langchain.py
sdks/openai_mcp/: README.md  __init__.py  veridion_openai_mcp.py
src/: annex_iv_compiler.rs  api_state.rs  background_worker.rs  bank_connector.rs  compliance_models.rs  crypto_shredder.rs  database.rs  deployment.rs  lib.rs  main.rs  module_service.rs  privacy_bridge.rs  routes.rs  test_helpers.rs
src/core/: ai_explainability.rs  annex_iv.rs  asset_policy_engine.rs  configuration_drift.rs  crypto_shredder.rs  executive_assurance.rs  mod.rs  policy_simulator.rs  privacy_bridge.rs  risk_assessment.rs  sovereign_lock.rs
src/integration/: mod.rs  multi_cloud.rs  notifications.rs  proxy.rs  veridion_tprm.rs  webhooks.rs
src/models/: db_models.rs  mod.rs
src/modules/: ai_bom.rs  breach_management.rs  consent.rs  data_subject_rights.rs  dpia.rs  green_ai.rs  human_oversight.rs  mod.rs  monitoring.rs  retention.rs  risk_assessment.rs
src/routes/: api_keys.rs  auth.rs  dora_lite.rs  gdpr_article_12.rs  modules.rs  wizard.rs
src/security/: api_keys.rs  audit.rs  auth.rs  error_handling.rs  headers.rs  mod.rs  rate_limit.rs  rbac.rs
src/services/: legislative_service.rs  mod.rs  wizard_service.rs
tests/: PENETRATION_TEST_README.md  SHADOW_MODE_MANUAL_TEST_CHECKLIST.md  SHADOW_MODE_TESTING_GUIDE.md  SHADOW_MODE_TEST_REPORT.md  SHADOW_MODE_TEST_STATUS.md  integration_test.rs  penetration_test_all.ps1  penetration_test_all.sh  penetration_test_jwt.py  penetration_test_rate_limit.py  penetration_test_sql.py  shadow_mode_test.ps1  shadow_mode_test.sh  test_shadow_mode_simple.ps1
veridion-cli/: Cargo.toml  README.md
veridion-cli/src/: main.rs
(+41 files in other folders)
