[package]
name = "veridion-nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22"
chrono = "0.4"
dotenv = "0.15.0"
printpdf = "0.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json", "blocking"] }
rcgen = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
