[package]
name = "veridion-nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
env_logger = "0.10"
dotenv = "0.15"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
actix-cors = "0.6"
# Additional dependencies
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22"
chrono = "0.4"
printpdf = "0.5"
rand = "0.9.2"
rcgen = "0.11"
sha2 = "0.10.9"
thiserror = "2.0.17"
uuid = { version = "1.0", features = ["v4"] }
