[package]
name = "veridion-nexus"
version = "0.1.0"
edition = "2021"

[lib]
name = "veridion_nexus"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
base64 = "0.21"
rand = "0.8"
aes-gcm = "0.10"
printpdf = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
dashmap = "5"
bcrypt = "0.15"
futures = "0.3"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
tokio-native-tls = "0.3"
flate2 = "1.0"

[dev-dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
serde_json = "1"
tokio-test = "0.4"
urlencoding = "2.1"
