[package]
name = "veridion-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "veridion"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"

